--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "php-flasher/flasher-toastr-symfony": "^2.1",
         "simplesoftwareio/simple-qrcode": "^4.2",
         "spatie/laravel-activitylog": "^4.10",
+        "spatie/laravel-backup": "^9.3",
         "spatie/laravel-permission": "^6.14",
         "yoeunes/toastr": "^3.1"
     },
